Resolve T37240: saving a new file always had absolute paths, now remap.